[package]
name = "html_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake-useragent = "0.1.3"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["blocking", "json"]}
select = "0.6.0"
trust-dns-resolver = "0.23.2"
